@@ -27,8 +27,10 @@ wajig (2.3) unstable; urgency=low
   * DEPENDENTS: improve output
   * INSTALLS/SUGGESTS: specifying multiple packages was broken, and too much
     so work to fix, so limit to just one.
+  * Remove wajig shell; I doubt if anyone will miss it, and am too lazy to
+    maintain it.
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Thu, 16 Feb 2012 00:44:28 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sat, 25 Feb 2012 23:33:19 +0200
 
 wajig (2.2) unstable; urgency=low
 
